# assembler-and-emulator

./: .gitignore  CMakeLists.txt  README.md
SimpleAssembler/: assembler.c  assembler.h  functions.asm
SimpleAssembler/include/: analysis.h  commons.h  configs.h  encodings.h  errors.h  pch.h  translator.h
SimpleAssembler/source/: analysis.c  commons.c  encodings.c  errors.c  translator.asm  translator.c
SimpleEmulator/: emulator.py
